// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when not paused 1`] = `
<vime-playback-control>
  <vime-control keycodes="75" label="Playback" scale="1">
    <vime-icon href="#vime-pause"></vime-icon>
    <vime-tooltip>
      Pause (k)
    </vime-tooltip>
  </vime-control>
</vime-playback-control>
`;

exports[`should be structurally sound when paused 1`] = `
<vime-playback-control>
  <vime-control keycodes="75" label="Playback" scale="1">
    <vime-icon href="#vime-play"></vime-icon>
    <vime-tooltip>
      Play (k)
    </vime-tooltip>
  </vime-control>
</vime-playback-control>
`;
